# octa

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.txt  Makefile  README.md  assets.go  bench.json  config.yaml  docker-compose.yaml  go.mod  go.sum  run.sh
cmd/octa/: consoleui.go  logo_ascii.go  main.go  signature.go
docs/: CNAME  config.md  index.html  index_old.html  why-not-have-test-files.md  why-not-warden.md  why-octa.html  why-octa.md
internal/appinfo/: appinfo.go  store.go
internal/config/: config.go  structs.go
internal/database/: cleaner.go  db.go  model.go
internal/handlers/: admin.go  auth.go  avatar.go  backup.go  core.go  main.go  upload.go
internal/middleware/: cors.go  logger.go  rateLimiter.go
pkg/cache/: memory.go
pkg/generator/: generator.go
pkg/generator/assets/: info.md
pkg/generator/styles/: initials.go
pkg/logger/: logger.go
pkg/utils/: color.go  env.go  file.go  font.go  image.go  image_processor.go  parser.go  response.go  security.go  utils.go
rust/bench/: Cargo.toml
rust/bench/src/: main.rs
rust/warden/: Cargo.toml  warden.md
rust/warden/src/: main.rs
scripts/: benchmark.go  dbseed.go  gocraft.go
web/: dashboard.html  login.html
web/static/js/: dashboard.js  dashboard.ts
