[package]
name = "octa-pulse"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.13.1", features = ["multipart", "stream"] }
image = { version = "0.24", default-features = false, features = ["jpeg"] }
uuid = { version = "1.6", features = ["v4"] }
indicatif = "0.18.3" # Progress bar
comfy-table = "7.1" # Report table
console = "0.16.2" # Terminal sylingt
futures = "0.3" # Concurrency stream tools

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"